# hackathon2

phase_1/: CLAUDE.md  README.md  pyproject.toml  test_script.py  todo.json
phase_1/.spec-kit/: speckit.specify
phase_1/src/: todo_manager.py
phase_2/: CLAUDE.md  README.md  main.py  simple_test.py  tasks.json  test_backend_setup.py  test_both_formats.py  test_functionality.py  test_rich_display.py  test_todo_manager.py  test_updated_structure.py  todo.json  todo_manager.py  verify_frontend.js
phase_2/.spec-kit/: config.yaml  speckit.constitution  speckit.plan  speckit.tasks
phase_2/backend/: CLAUDE.md  auth.py  config.py  database.py  main.py  models.py  requirements.txt  sql_app.db
phase_2/backend/ai/: task_processor.py
phase_2/backend/api/routes/: ai.py  tasks.py
phase_2/backend/middleware/: auth_middleware.py
phase_2/frontend/: .env.local  CLAUDE.md  next.config.js  package-lock.json  package.json
phase_2/frontend/.next/: trace
phase_2/frontend/.next/cache/: .rscinfo
phase_2/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
phase_2/frontend/app/: layout.js  page.js  providers.jsx
phase_2/frontend/app/dashboard/: page.js
phase_2/frontend/components/ai/: AIChatComponent.js
phase_2/frontend/lib/: api.js  auth.js
phase_2/specs/: ai_spec.md  overview.md
phase_2/specs/database/: schema.md
phase_2/src/: main.py  todo_manager.py
phase_3/: init_db.py
phase_3/backend/: database.py  main.py  mcp_server.py  models.py
phase_3/frontend/: index.html
phase_3/specs/: todo-ai.md
(+79 files in other folders)
