[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-native-todo-app"
version = "1.0.0"
description = "A cloud-native todo application following Spec-Driven Development methodology"
authors = [
    {name = "Spec-Driven Developer"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
todo-cli = "main:main"